# rm2_controls

./: Doxyfile  README.md
rm2_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
rm2_common/include/rm2_common/: eigen_types.h  linear_interpolation.h  ori_tool.h  ros_utilities.h  tf_rt_broadcaster.h
rm2_common/include/rm2_common/decision/: calibration_queue.h  command_sender.h  controller_manager.h  heat_limit.h  power_limit.h  service_caller.h
rm2_common/include/rm2_common/filters/: imu_complementary_filter.h  imu_filter_base.h  kalman_filter.h  lp_filter.h
rm2_common/include/rm2_common/hardware_interface/: actuator_extra_interface.h  gpio_interface.h  rm_imu_sensor_interface.h  robot_state_interface.h  tof_radar_interface.h
rm2_common/src/: ori_tool.cpp  tf_rt_broadcaster.cpp
rm2_common/src/filter/: filters.cpp  imu_complementary_filter.cpp  imu_filter_base.cpp  lp_filter.cpp
rm2_common/test/: LqrTest.cpp  test_kalman_filter.cpp  test_one_euro_filter.cpp  test_traj.cpp
rm2_control/: CMakeLists.txt  package.xml
rm2_gazebo/include/rm_gazebo/: rm_robot_hw_sim.h
rm2_hw/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rm2_hw/config/: hw_config_template.yaml
rm2_hw/include/rm_hw/: control_loop.h
rm2_hw/include/rm_hw/hardware_interface/: can_bus.h  gpio_manager.h  hardware_interface.h  types.h
rm2_hw/include/rm_hw/transmission/: multi_actuator_transmission_loader.h
rm2_hw/launch/: rm_hw.launch
rm2_hw/src/: control_loop.cpp  rm_hw.cpp
rm2_hw/src/hardware_interface/: can_bus.cpp  gpio_manager.cpp  hardware_interface.cpp  parse.cpp  socketcan.cpp
rm2_hw/src/transmission/: multi_actuator_transmission_loader.cpp
rm2_hw/test/: test_imu.launch  test_imu.yaml  test_motor.launch  test_motor.yaml
rm2_msgs/: CMakeLists.txt  package.xml
rm2_referee/: CHANGELOG.rst  CMakeLists.txt  package.xml
rm2_referee/include/rm2_referee/: referee.h  referee_base.h
rm2_referee/include/rm2_referee/common/: data.h  protocol.h
rm2_referee/include/rm2_referee/ui/: flash_ui.h  graph.h  interactive_data.h  time_change_ui.h  trigger_change_ui.h  ui_base.h
rm2_referee/launch/: load.launch
rm2_referee/src/: main.cpp  referee.cpp  referee_base.cpp
rm2_referee/src/ui/: flash_ui.cpp  graph.cpp  interactive_data.cpp  time_change_ui.cpp  trigger_change_ui.cpp  ui_base.cpp
rm_dbus/: CHANGELOG.rst
rm_dbus/include/rm_dbus/: dbus.h  dbus_node.h
rm_dbus/src/: dbus.cpp  dbus_node.cpp
rm_gazebo/: CHANGELOG.rst
rm_gazebo/src/: rm_robot_hw_sim.cpp
