<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm2_common</name>
  <version>0.1.0</version>
  <description>ros2 version of rm2_common</description>
  <maintainer email="1511786107@qq.com">ciler</maintainer>
  <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_generators</exec_depend>


    <build_depend>rclcpp</build_depend>
    <exec_depend>rclcpp</exec_depend>
    <depend>tf2</depend>
    <depend>geometry_msgs</depend>
    <depend>realtime_tools</depend>
    <depend>rm2_msgs</depend>
    <depend>imu_complementary_filter</depend>
    <depend>imu_filter_madgwick</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>eigen</depend>
    <depend>control_msgs</depend>
    <depend>controller_manager_msgs</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <build_type>ament_cmake</build_type>
    </export>
</package>
