<?xml version="1.0"?>
<package format="2">
    <name>rm2_hw</name>
    <version>0.1.20</version>
    <description>ROS control warped interface for RoboMaster motor and some robot hardware</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <!-- build_depend: dependencies only used in source files -->
    <!-- depend: build, export, and execution dependency -->
    <depend>rclcpp</depend>

    <depend>rm2_common</depend>
    <depend>rm2_msgs</depend>
    <depend>hardware_interface</depend>
    <depend>controller_interface</depend>
    <depend>transmission_interface</depend>
    <depend>joint_limits_interface</depend>
    <depend>controller_manager</depend>
    <depend>urdf</depend>
    <depend>realtime_tools</depend>

    <export>
        <transmission_interface plugin="${prefix}/rm_hw_loader_plugins.xml"/>
        <build_type>ament_cmake</build_type>
    </export>
</package>
